<?xml version="1.0"?>
<package>
  <name>dvrk_playfile_reader</name>
  <version>1.3.0</version>
  <description>The dvrk_playfile_reader package</description>

  <maintainer email="eetuna@gmail.com">eetuna</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>